--- a/jscasl2_sim.html
+++ b/jscasl2_sim.html
@@ -579,7 +579,7 @@ input[type="text"]{
 
 		<div id="footer" class="footer">
 			<div>in: <input type="radio" name="calc_in_mode" value="hex" checked />hex <input type="radio" name="calc_in_mode" value="dec" />dec &emsp; out: <input type="radio" name="calc_out_mode" value="hex" onchange="onChange_cal_out_mode(arguments[0])" checked />hex <input type="radio" name="calc_out_mode" value="dec" onchange="onChange_cal_out_mode(arguments[0])" />dec &emsp; calc:<input type="text" style="width:100px" id="calc_in" name="calc_in" value="" onchange="onChange_calc_in()" onkeydown="onKeyDown_calc_in(arguments[0]);" /> => <input type="text" style="width:100px" id="calc_out" name="calc_out" value="" readonly /></div>
-			<div>Copyright (c) 2025, Ryota SUZUKI. All rights reserved. <a href="./LICENSE" target="_blank">The program is distributed under GPL-2.0 License</a>.</div>
+			<div>Copyright (c) 2025, Ryota SUZUKI. All rights reserved. <a href="./LICENSE.txt" target="_blank">The program is distributed under GPL-2.0 License</a>.</div>
 		</div>
 	</div>
 
